(No changes)

Optimizations
---------------------

* GITHUB#13828: Reduce long[] array allocation for bitset in readBitSetIterator. (Zhang Chao)

* GITHUB#13800: MaxScoreBulkScorer now recomputes scorer partitions when the
  minimum competitive allows for a more favorable partitioning. (Adrien Grand)

* GITHUB#13930: Use growNoCopy when copying bytes in BytesRefBuilder. (Ignacio Vera)

Bug Fixes
---------------------
* GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
  when they were not sorted by startOffset. (Seunghan Jung)
* GITHUB#13884: Remove broken .toArray from Long/CharObjectHashMap entirely. (Pan Guixin)
* GITHUB#12686: Added support for highlighting IndexOrDocValuesQuery. (Prudhvi Godithi)
* GITHUB#13927: Fix StoredFieldsConsumer finish. (linfn)

Build
---------------------

* Upgrade forbiddenapis to version 3.8.  (Uwe Schindler)

Other
---------------------
(No changes)

======================== Lucene 10.0.1 =======================

Bug Fixes
---------------------


======================= Lucene 10.0.0 =======================

API Changes
---------------------
* LUCENE-12092: Remove deprecated UTF8TaxonomyWriterCache. Please use LruTaxonomyWriterCache
  instead. (Vigya Sharma)

* LUCENE-10010: AutomatonQuery, CompiledAutomaton, RunAutomaton, RegExp
  classes no longer determinize NFAs. Instead it is the responsibility
  of the caller to determinize.  (Robert Muir)

* LUCENE-10368: IntTaxonomyFacets has been make pkg-private and serves only as an internal
  implementation detail of taxonomy-faceting. (Greg Miller)

* LUCENE-10400: Remove deprecated dictionary constructors in Kuromoji and Nori (Tomoko Uchida)

* LUCENE-10440: TaxonomyFacets and FloatTaxonomyFacets have been made pkg-private and only serve
  as internal implementation details of taxonomy-faceting. (Greg Miller)

* LUCENE-10431: MultiTermQuery.setRewriteMethod() has been removed. (Alan Woodward)
