@@ -153,70 +153,6 @@ final class BooleanWeight extends Weight {
     return MatchesUtils.fromSubMatches(matches);
   }
 
-  // Return a BulkScorer for the optional clauses only,
-  // or null if it is not applicable
-  // pkg-private for forcing use of BooleanScorer in tests
-  BulkScorer optionalBulkScorer(LeafReaderContext context) throws IOException {
-    if (scoreMode == ScoreMode.TOP_SCORES) {
-      if (!query.isPureDisjunction()) {
-        return null;
-      }
-
-      List<ScorerSupplier> optional = new ArrayList<>();
-      for (WeightedBooleanClause wc : weightedClauses) {
-        Weight w = wc.weight;
-        BooleanClause c = wc.clause;
-        if (c.occur() != Occur.SHOULD) {
-          continue;
-        }
-        ScorerSupplier scorer = w.scorerSupplier(context);
-        if (scorer != null) {
-          optional.add(scorer);
-        }
-      }
-
-      if (optional.size() <= 1) {
-        return null;
-      }
-
-      List<Scorer> optionalScorers = new ArrayList<>();
-      for (ScorerSupplier ss : optional) {
-        optionalScorers.add(ss.get(Long.MAX_VALUE));
-      }
-
-      return new MaxScoreBulkScorer(context.reader().maxDoc(), optionalScorers);
-    }
-
-    List<BulkScorer> optional = new ArrayList<BulkScorer>();
-    for (WeightedBooleanClause wc : weightedClauses) {
-      Weight w = wc.weight;
-      BooleanClause c = wc.clause;
-      if (c.occur() != Occur.SHOULD) {
-        continue;
-      }
-      BulkScorer subScorer = w.bulkScorer(context);
-
-      if (subScorer != null) {
-        optional.add(subScorer);
-      }
-    }
-
-    if (optional.size() == 0) {
-      return null;
-    }
-
-    if (query.getMinimumNumberShouldMatch() > optional.size()) {
-      return null;
-    }
-
-    if (optional.size() == 1) {
-      return optional.get(0);
-    }
-
-    return new BooleanScorer(
-        optional, Math.max(1, query.getMinimumNumberShouldMatch()), scoreMode.needsScores());
-  }
-
   @Override
   public int count(LeafReaderContext context) throws IOException {
     final int numDocs = context.reader().numDocs();
